<resources>
    <string name="app_name">lab0910</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id_curso">Id Curso</string>
    <string name="descripcion">Descripción</string>
    <string name="creditos">Creditos</string>
    <string name="id_est">Id Estudiante</string>
    <string name="nomb_est">Nombre</string>
    <string name="apell_est">Apellido</string>
    <string name="edad_est">Edad</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_curso">CursoActivity</string>
    <string name="nav_header_title">Matricula</string>
    <string name="nav_header_subtitle">2020</string>

    <string name="delete">ELIMINAR</string>
    <string name="edit">EDITAR</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list_curso">Cursos</string>
    <string name="title_activity_principal_menu">Menu Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="search_hint">Ingrese nombre..</string>
    <string name="action_search">Buscar</string>


    <string name="Administrador">Administrador</string>
    <string name="Estudiantes">Estudiantes</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mis_cursos">Mis Cursos</string>
    <string name="Text_Est">Estudiante</string>
    <string name="cursos">Cursos</string>
    <string name="matricular">Matricular Curso</string>
    <string name="cursosMatriculados">Cursos Matriculados</string>
    <string name="mat">Matricular</string>
    <string name="desmat">Desmatricular</string>
    <string name="title_activity_list_estudiante">Estudiantes</string>
    <string name="title_activity_list_matricular">Matricular Cursos</string>
    <string name="title_activity_list_matriculados">Mis Cursos</string>


</resources>