<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Estudiante"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Text_Est">
        <menu android:checkableBehavior="single" >
            <item android:id="@+id/matricular"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/matricular" />

            <item android:id="@+id/listMatriculados"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cursosMatriculados"/>

        </menu>
        </item>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Administrador"
            >
            <menu android:checkableBehavior="single" >
                <item android:id="@+id/Cursos"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/cursos" />
                <item android:id="@+id/Estudiantes"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/Estudiantes" />
            </menu>
        </item>
    </group>
</menu>